# kotonia-desktop

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
frontend/: index.html  main.js  speech-sanitizer.js  styles.css
frontend/src/: main.ts
frontend/tests/: speech-sanitizer.test.js
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  commands.rs  ditto.rs  main.rs  persona.rs  state.rs  stt.rs  tts.rs
