[package]
name = "kotonia-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri shell that runs kotonia-cli's agent loop as a local desktop app, talking to kotonia.ai for LLM inference via the device_token from `kotonia-cli login`."
license = "MIT"

[[bin]]
name = "kotonia-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"

kotonia-cli = { path = "../../kotonia-cli" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"

[features]
default = []
